add all APIS