@@ -6,10 +6,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Component
@@ -30,10 +27,15 @@ public class ProductService
     private void initilizeProducts() {
 
         add(new Product( "Laptop", Category.ELECTRONICS, 22000.60));
+        add(new Product( "Mobile", Category.ELECTRONICS, 10000.60));
         add(new Product( "t-Shirt", Category.CLOTHES, 200.60));
         add(new Product( "bed", Category.FURNITURE, 7200.60));
         add(new Product( "MOB", Category.ELECTRONICS, 11000.60));
         add(new Product( "tv", Category.ELECTRONICS, 22000.60));
+        add(new Product( "Sunglasses", Category.CLOTHES, 500.60));
+        add(new Product( "glasses", Category.CLOTHES, 300.60));
+
+
     }
 
     public void add(Product product)
@@ -91,9 +93,13 @@ public class ProductService
     public  List<Product> searchByName(String name)
     {
        return products.values().stream()
-                .filter(product -> product.getName().equals(name))
-                .collect(Collectors.toList());
+                .filter(product ->isNameMatching(name ,product))
+               .toList();
 
+    }
+    private static boolean isNameMatching(String name,Product product)
+    {
+        return  product.getName().toLowerCase().contains(name.toLowerCase());
     }
 
     public  boolean updateProduct(Product newProduct) {
@@ -108,4 +114,19 @@ public class ProductService
        return false; //if product is null then not entered if and return false.
     }
 
+    public List<Product> searchProdcutByRange(Double lowerPrice, Double higherPrice) {
+       List<Product> matchProduct= products.values().stream()
+                .filter(product -> isPriceRangeValid(lowerPrice,higherPrice,product))
+                .toList();
+
+       List<Product> allProducts=new ArrayList<>(matchProduct);
+
+        Collections.sort(allProducts,(p1,p2) -> Double.compare(p2.getPrice(),p1.getPrice()));
+       return  allProducts;
+    }
+
+    private boolean isPriceRangeValid(Double lowerPrice, Double higherPrice, Product product) {
+
+      return product.getPrice() >= lowerPrice &&  product.getPrice()<=higherPrice;
+    }
 }
